--- a/styles/globals.css
+++ b/styles/globals.css
@@ -134,7 +134,8 @@
     }
 
     .preview::after {
-        content: "Created using https://atsresume.vercel.app/";
+        /* content: "Created using https://atsresume.vercel.app/"; */
+        content: "";
         position: fixed;
         bottom: 0;
         right: 0;
